feat: 实现完整的角色权限控制系统
- 新增Role和Permission实体类及其关联关系
- 实现用户角色多对多关联
- 完善UserPrincipal类的权限处理逻辑
- 新增项目审核功能和相关实体
- 添加Redis配置和定时任务支持
- 更新前端项目表单组件
- 完善数据库初始化脚本和测试数据

此提交作为复杂权限系统的备份，后续将简化为isAdmin模式