@@ -1,5 +1,7 @@
 package com.quickcode.security.jwt;
 
+import com.quickcode.entity.Permission;
+import com.quickcode.entity.Role;
 import com.quickcode.entity.User;
 import lombok.AllArgsConstructor;
 import lombok.Data;
@@ -10,7 +12,9 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.time.LocalDateTime;
 import java.util.Collection;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 /**
@@ -24,6 +28,8 @@ import java.util.stream.Collectors;
 @NoArgsConstructor
 @AllArgsConstructor
 public class UserPrincipal implements UserDetails {
+
+    private static final String ROLE_PREFIX = "ROLE_";
 
     private Long id;
     private String username;
@@ -39,21 +45,35 @@ public class UserPrincipal implements UserDetails {
      * 从User实体创建UserPrincipal
      */
     public static UserPrincipal create(User user) {
-        List<GrantedAuthority> authorities = user.getRoles().stream()
+        if (user == null) {
+            throw new IllegalArgumentException("用户对象不能为空");
+        }
+
+        // 获取用户角色，如果为空则使用空集合
+        Set<Role> roles = user.getRoles() != null ? user.getRoles() : new HashSet<>();
+
+        List<GrantedAuthority> authorities = roles.stream()
+                .filter(role -> role != null && role.isActive()) // 过滤空角色和非激活角色
                 .flatMap(role -> {
                     // 添加角色权限
-                    List<GrantedAuthority> roleAuthorities = role.getPermissions().stream()
-                            .filter(permission -> permission.isActive())
+                    Set<Permission> permissions = role.getPermissions() != null ? role.getPermissions() : new HashSet<>();
+                    List<GrantedAuthority> roleAuthorities = permissions.stream()
+                            .filter(permission -> permission != null && permission.isActive())
                             .map(permission -> new SimpleGrantedAuthority(permission.getPermissionCode()))
                             .collect(Collectors.toList());
-                    
+
                     // 添加角色本身作为权限（以ROLE_前缀）
-                    roleAuthorities.add(new SimpleGrantedAuthority("ROLE_" + role.getRoleCode()));
-                    
+                    roleAuthorities.add(new SimpleGrantedAuthority(ROLE_PREFIX + role.getRoleCode()));
+
                     return roleAuthorities.stream();
                 })
                 .distinct()
                 .collect(Collectors.toList());
+
+        // 如果用户没有任何角色，至少给一个默认的USER角色
+        if (authorities.isEmpty()) {
+            authorities.add(new SimpleGrantedAuthority(ROLE_PREFIX + "USER"));
+        }
 
         return new UserPrincipal(
                 user.getId(),
@@ -115,7 +135,7 @@ public class UserPrincipal implements UserDetails {
      * 检查是否拥有指定角色
      */
     public boolean hasRole(String role) {
-        String roleWithPrefix = role.startsWith("ROLE_") ? role : "ROLE_" + role;
+        String roleWithPrefix = role.startsWith(ROLE_PREFIX) ? role : ROLE_PREFIX + role;
         return authorities.stream()
                 .anyMatch(auth -> auth.getAuthority().equals(roleWithPrefix));
     }
@@ -126,8 +146,8 @@ public class UserPrincipal implements UserDetails {
     public List<String> getPermissions() {
         return authorities.stream()
                 .map(GrantedAuthority::getAuthority)
-                .filter(auth -> !auth.startsWith("ROLE_"))
-                .collect(Collectors.toList());
+                .filter(auth -> !auth.startsWith(ROLE_PREFIX))
+                .toList();
     }
 
     /**
@@ -136,9 +156,9 @@ public class UserPrincipal implements UserDetails {
     public List<String> getRoles() {
         return authorities.stream()
                 .map(GrantedAuthority::getAuthority)
-                .filter(auth -> auth.startsWith("ROLE_"))
-                .map(auth -> auth.substring(5)) // 移除ROLE_前缀
-                .collect(Collectors.toList());
+                .filter(auth -> auth.startsWith(ROLE_PREFIX))
+                .map(auth -> auth.substring(ROLE_PREFIX.length())) // 移除ROLE_前缀
+                .toList();
     }
 
     /**
